# signal-protocol.py

./: Cargo.toml  Makefile  README.md  build-wheels.sh  pyproject.toml  requirements.txt  rust-toolchain  setup.py
.circleci/: config.yml
examples/: kem_bundle.py  ser.rs  stores.py
examples/testing/: fixed.py  test.py
hooks/: post-checkout
proto_python/: Backup_pb2.py  Backups_pb2.py  CDSI_pb2.py  DecryptedGroups_pb2.py  DeviceName_pb2.py  Emoji_pb2.py  ExternalBackups_pb2.py  Groups_pb2.py  InternalSerialization_pb2.py  JobData_pb2.py  KeyBackupService_pb2.py  KeyValue_pb2.py  MessageProcessing_pb2.py  Payments_pb2.py  Provisioning_pb2.py  ResumableUploads_pb2.py  SVR2_pb2.py  SignalService_pb2.py  StickerResources_pb2.py  StorageService_pb2.py  Trace_pb2.py  WebSocketResources_pb2.py  backup_pb2.py  cds2_pb2.py  chat_websocket_pb2.py  fingerprint_pb2.py  sealed_sender_pb2.py  service_pb2.py  storage_pb2.py  svr2_pb2.py  svr3_pb2.py  svr_pb2.py  test_pb2.py  username_pb2.py  wire_pb2.py
script/: fix-docstrings.py
signal_protocol/: account_keys.pyi  address.pyi  crypto.pyi  curve.pyi  device_transfer.pyi  error.pyi  fingerprint.pyi  group_cipher.pyi  helpers.pyi  identity_key.pyi  kem.pyi  protocol.pyi  ratchet.pyi  sealed_sender.pyi  sender_keys.pyi  session.pyi  session_cipher.pyi  state.pyi  storage.pyi  uuid.pyi
signal_protocol/address/: __init__.pyi
src/: account_keys.rs  address.rs  base_crypto.rs  curve.rs  device_transfer.rs  error.rs  fingerprint.rs  group_cipher.rs  helpers.rs  identity_key.rs  kem.rs  key_transparency.rs  lib.rs  pin.rs  protocol.rs  ratchet.rs  sealed_sender.rs  sender_keys.rs  session.rs  session_cipher.rs  state.rs  storage.rs  uuid.rs
tests/: base_crypto.py  test_account_keys.py  test_base_crypto.py  test_device_transfer.py  test_example.py  test_group_cipher.py  test_kem.py  test_pin.py  test_protocol.py  test_ratchet.py  test_sealed_sender.py  test_session.py  test_state.py
tests/utils/: sessions.py
