[package]
name = "signal-protocol"
version = "0.2.3-alpha1"
authors = [""]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
rand = "0.8"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", rev="b92da3a15cc2d0b05e3a27d2228986c213507d4e" }
signal-crypto = { git = "https://github.com/signalapp/libsignal", version = "0.1.0"}
signal-pin = { git = "https://github.com/signalapp/libsignal", version = "0.1.0"}
device-transfer = { git = "https://github.com/signalapp/libsignal", version = "0.1.0"}
pyo3 = { version = "0.20.2", features = ["extension-module", "multiple-pymethods"] }
futures = "0.3.7"
rand_core = { version = "0.6.4", default-features = false }
uuid = { version = "1.7.0", features = ["v1", "v3", "v4", "v5"] }
pyo3-log = "0.9.0"

[lib]
name = "signal_protocol"
crate-type = ["cdylib"]
