[package]
name = "signal-protocol"
version = "0.2.3-alpha1"
authors = [""]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
rand = "0.8"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag="v0.58.2" }
signal-crypto = { git = "https://github.com/signalapp/libsignal", version = "0.1.0" }
pyo3 = { version = "0.20.2", features = ["extension-module", "multiple-pymethods"] }
futures = "0.3.7"
rand_core = { version = "0.6.4", default-features = false }
uuid = { version = "1.7.0", features = ["v1", "v3", "v4", "v5"] }
pyo3-log = "0.9.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
base64 = "0.21.7"

[lib]
name = "signal_protocol"
crate-type = ["cdylib"]
