[build-system]
requires = ["maturin>=1.4,<2.0","setuptools", "wheel", "setuptools-rust"]
build-backend = "maturin"

[project]
name = "signal_protocol"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]